syntax = "proto3";

package api.v1.capsule;

import "google/protobuf/timestamp.proto";
import "model/author.proto";

// An event is a message from a rollout
message Event {
  // Potential author associated with the event.
  model.Author created_by = 1;
  // When the event was created.
  google.protobuf.Timestamp created_at = 2;
  // The rollout that created the event.
  uint64 rollout_id = 3;
  // A message associated with the event.
  string message = 4;
  // The data associated with the event.
  EventData event_data = 5;
}

// An event that is associated with a rollout.
message RolloutEvent {}

// An event that is associated with an abort.
message AbortEvent {}

// An event that is associated with an error.
message ErrorEvent {}

// The data associated with an event.
message EventData {
  oneof kind {
    // If event is a rollout.
    RolloutEvent rollout = 1;
    // if event is an error event.
    ErrorEvent error = 2;
    // If event is an abort event.
    AbortEvent abort = 3;
  }
}
